Test Admin page

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 	<h1>Test</h1>
+	<h2>Helloooooooooo</h2>
+	<!-- Footer -->
+  	<div>
+  		<p>The GummyBears control panel - Copyright &copy;</p>
+  	</div>
 </body>
 </html>
