--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"> 
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">> 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -13,6 +14,9 @@
 <body>
 	<div class="container-fluid">
 		<div>
+			<form th:action="${/logout}" method="post" th:hidden="true" name="logoutForm">
+				<input type="submit"/>
+			</form>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<a class="navbar-brand" th:href="@{/}"> 
 					<img th:src="@{/images/gummybear_logo.png}">
@@ -28,6 +32,15 @@
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{/newuser/}">New User</a>
+						</li>
+						<li>
+							<span class="fas fa-user fa-2x icon-silver"> </span>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown toggle" data-toggle="dropdown" sec:authentication="principal.fullname"></a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" id="logoutLink" href="">Logout</a>
+							</div>
 						</li>
 					</ul>
 				
@@ -78,6 +91,15 @@
 	<div class="text-center">
 		<p> Copyright &copy; GummyBear </p>
 	</div>
+	
+<script type="text/javascript">
+	$(document).ready(function() {
+		$("#logoutLink").on("click", function (e) {
+			e.preventDefault();
+			document.logoutForm.submit()
+		});
+	});
+</script>
 	
 </body>
 </html>
