--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
@@ -1,9 +1,10 @@
+<!-- Thitari -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"> 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-	<title>Home - GummyBear Admin</title>
+	<title>Create New User</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"> </script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"> </script> 
@@ -39,39 +40,29 @@
 	<br>
 	
 	<div>
-		<h2> Company Employees</h2>
+		<h2> Manage Users | Create New User</h2>
 	</div>
 	
-	<br>
+<!--Form section-->
+<form th:action="@{/users/save}" method="POST" style="max-width: 700px; margin: 0 auto;"
+th:object="${user}">
+    <div class="border border-secondary rounded p-3">
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label">Email: </label>
+            <div class="col-sm-8">
+                <input type="email" class="form-control" th:field="*{email}" required minlength="8" maxlength="128" />
+            </div>
+        </div>
+        <!--Button-->
+        <div class="text-center">
+            <input type="submit" value="save" class="btn btn-primary m-3"/>
+            <input type="button" value="cancel" class="btn btn-secondary"/>
+        </div>
+    </div>
+</form>
 	
 	<div>
-		<table class="table table-bordered table-striped table-hover table-responsive-xL">
-			<thead class="thead-dark">
-				<tr> 
-					<th> User ID </th>
-					<th> First Name </th>
-					<th> Last Name </th>
-					<th> Email </th>
-					<th> Enabled Status </th>
-					<th> Role </th>
-					<th> Job Title </th> 
-					<th> Working Hours </th> 
-				</tr>
-			</thead> 
-			
-			<tbody>
-				<tr th:each="user : ${listUsers}">
-					<td>[[${user.id}]]</td>
-					<td>[[${user.firstName}]]</td>
-					<td>[[${user.lastName}]]</td>
-					<td>[[${user.email}]]</td>
-					<td>[[${user.enabled}]]</td>
-					<td>[[${user.roles}]]</td>
-					<td>[[${user.jobTitle}]]</td>
-					<td>[[${user.workingHours}]]</td>
-				</tr>
-			</tbody>
-		</table>
+		
 	</div>
 	
 	
