--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
@@ -44,6 +44,7 @@
 	</div>
 	
 <!--Form section-->
+<!--Form section-->
 <form th:action="@{/users/save}" method="POST" style="max-width: 700px; margin: 0 auto;"
 th:object="${user}">
     <div class="border border-secondary rounded p-3">
@@ -51,6 +52,38 @@ th:object="${user}">
             <label class="col-sm-4 col-form-label">Email: </label>
             <div class="col-sm-8">
                 <input type="email" class="form-control" th:field="*{email}" required minlength="8" maxlength="128" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label">First Name: </label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" th:field="*{firstName}" required minlength="2" maxlength="45" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label">Last Name: </label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" th:field="*{lastName}" required minlength="2" maxlength="45" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label">Password: </label>
+            <div class="col-sm-8">
+                <input type="password" class="form-control" th:field="*{password}" required minlength="8" maxlength="20" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label">Roles: </label>
+            <div class="col-sm-8">
+                <th:block th:each="role : ${listRoles}">
+                    <input type="checkbox" th:field="*{roles}" 
+                    th:text="${role.name}"
+                    th:value="${role.id}"
+                    class="m-2"
+                    />
+                    - <small>[[${role.description }]]<small>
+                    <br/>
+                </th:block>
             </div>
         </div>
         <!--Button-->
