--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
@@ -86,6 +86,12 @@ th:object="${user}">
                 </th:block>
             </div>
         </div>
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label">Enabled: </label>
+            <div class="col-sm-8">
+                <input type="checkbox" th:field="*{enabled}"  />
+            </div>
+        </div>
         <!--Button-->
         <div class="text-center">
             <input type="submit" value="save" class="btn btn-primary m-3"/>
