users.html updated

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
@@ -56,6 +56,11 @@
 		<a th:href="@{/users/new}">Create New User</a>
 	</div>
 	
+	<!--Thitari-->
+    <div th:if="${message != null}" class="alert alert-success text-center">
+        [[${message}]]
+    </div>
+    
 	<br>
 	
 	<div>
