js for cancel button added

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
@@ -109,5 +109,14 @@ th:object="${user}">
 		<p> Copyright &copy; GummyBear </p>
 	</div>
 	
+	
+	<!--Thitari-->
+	<script type="text/javascript">
+		$(document).ready(function(){
+		$("#buttonCancel").on("click", function() {
+		window.location = "[[@{/users}]]";
+			});
+		});
+	</script>
 </body>
 </html>
