Update th.href "@{'/users/edit/' + ${user.id}}" for edit a user

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
@@ -88,6 +88,18 @@
 					<td>[[${user.roles}]]</td>
 					<td>[[${user.jobTitle}]]</td>
 					<td>[[${user.workingHours}]]</td>
+					
+					
+					
+					<!--Thitari-->
+					<!--edit from S32-->
+					<td>
+					<a class="fas fa-edit fa-2x icon green" th:href="@{'/users/edit/' + ${user.id}}"
+					title="Edit this user"></a>
+					&nbsp;
+					<a class="fas fa-trash fa-2x icon-dark" th:href=""></a>
+					</td>
+					
 				</tr>
 			</tbody>
 		</table>
