--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
@@ -1,10 +1,10 @@
-<!-- Thitari -->
+<!-- Thitari /Implemented from users.html-->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"> 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-	<title>Create New User</title>
+	<title>[[${pageTitle}]]</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"> </script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"> </script> 
@@ -40,7 +40,7 @@
 	<br>
 	
 	<div>
-		<h2> Manage Users | Create New User</h2>
+		<h2> Manage Users | [[${pageTitle}]]</h2>
 	</div>
 
 <!--Form section-->
