--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
@@ -45,7 +45,8 @@
 
 <!--Form section-->
 <form th:action="@{/users/save}" method="POST" style="max-width: 700px; margin: 0 auto;"
-th:object="${user}">
+th:object="${user}" onsubmit="return checkEmailUnique(this);">
+<input type="hidden" th:field="*{id}"/>
     <div class="border border-secondary rounded p-3">
         <div class="form-group row">
             <label class="col-sm-4 col-form-label">Email: </label>
