JS added and updated for Email validation

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
@@ -117,6 +117,27 @@ th:object="${user}" onsubmit="return checkEmailUnique(this);">
 		window.location = "[[@{/users}]]";
 			});
 		});
+		
+	function checkEmailUnique(form){
+    url = "[[@{/users/check_email}]]";
+    userEmail = $("#email").val();
+    userId = $("#id").val();
+    csrfValue = $("input[name='_csrf']").val();
+    params = {id: userId, email: userEmail, _csrf: csrfValue};
+
+    $post(url, params, function(response){
+        if(response == "OK"){
+            form.submit();
+        }else if(reponse == "Duplicated"){
+            showModalDialog("Warning", "There is another user having the email " + userEmail);
+        }else{
+            showModalDialog("Error", "Unknown response from server");
+        }
+    }).fail(function(){
+        showModalDialog("Error", "Could not connect to the server");
+    });
+    return false;
+}
 	</script>
 </body>
 </html>
