--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users_form.html
@@ -69,7 +69,11 @@ th:object="${user}" onsubmit="return checkEmailUnique(this);">
         <div class="form-group row">
             <label class="col-sm-4 col-form-label">Password: </label>
             <div class="col-sm-8">
-                <input type="password" class="form-control" th:field="*{password}" required minlength="8" maxlength="20" />
+                <!--ID is null which means, creating a new user-->
+                <input th:if="${user.id == null}" type="password" class="form-control" th:field="*{password}" required minlength="8" maxlength="20" />
+
+                <!--ID is not null which means, the field (attribute) is not required-->
+                <input th:if="${user.id != null}" type="password" class="form-control" th:field="*{password}"  minlength="8" maxlength="20" />
             </div>
         </div>
         <div class="form-group row">
