set title for delete user

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
@@ -97,8 +97,9 @@
 					<a class="fas fa-edit fa-2x icon green" th:href="@{'/users/edit/' + ${user.id}}"
 					title="Edit this user"></a>
 					&nbsp;
-					<!-- update hibernate link from S33-->
-					<a class="fas fa-trash fa-2x icon-dark" th:href="@{'/users/delete/' + ${user.id}}"></a>
+					<!-- update hibernate link and set Title (S33 6048)-->
+					<a class="fas fa-trash fa-2x icon-dark" th:href="@{'/users/delete/' + ${user.id}}"
+					title="Delete this user"></a>
 					</td>
 					
 				</tr>
