HTML and JS of "delete dialog" created

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
@@ -107,6 +107,26 @@
 		</table>
 	</div>
 	
+	<!--Thitari/ Modal delete dialog -->
+	<div class="modal fade text-center" id="confirmModal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class ="modal-title">Delete Confirmation</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+	
+				<div class="modal-body">
+					<span id="confirmText"></span>
+				</div>
+	
+				<div class="modal-footer">
+					<a class="btn btn-success" href="" id="yesButton">Yes</a>
+					<button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 	<div class="text-center">
 		<p> Copyright &copy; GummyBear </p>
@@ -119,6 +139,22 @@
 			document.logoutForm.submit()
 		});
 	});
+</script>
+
+<!-- Thitari JS for delete dialog -->
+<script type = "text/javascript">
+	$(document).ready(function() {
+			$(".link-delete").on("click", function(e) {
+				e.preventDefault();
+				link = $(this);
+				//alert($(this).attr("href"));
+				userId = link.attr("userId");
+				$("#yesButton").attr("href", link.attr("href"));
+				$("#con-firmText").text("Are you sure to delete this user " + userId +"?");
+				$("#confirmModal").modal();
+				//showDeleteConfirmModal($(this), 'user');
+			});
+		});
 </script>
 	
 </body>
