--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
@@ -89,11 +89,17 @@
 					<td>[[${user.jobTitle}]]</td>
 					<td>[[${user.workingHours}]]</td>
 					
-					<!-- enable icon -->
+					<!-- Update enable icon with modified url -->
 					<td>
-						<a th:if="${user.enabled == true}" class="fas fa-check-circle fa-2x icon-green" href=""></a>
-						<a th:if="${user.enabled == false}" class="fas fa-circle fa-2x icon-dark" href=""></a>
+						<a th:if="${user.enabled == true}" class="fas fa-check-circle fa-2x icon-green" 
+						th:href="@{'/users/' + ${user.id} + '/enabled/false'}"
+						title="Disable this user"></a>
+
+						<a th:if="${user.enabled == false}" class="fas fa-circle fa-2x icon-dark" 
+						th:href="@{'/users/' + ${user.id} + '/enabled/true'}"
+						title="Enable this user"></a>
 					</td>
+
 					
 					
 					<!--Thitari-->
