--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/index.html
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-<meta charset="ISO-8859-1">
-<title>Gummy Bear Admin</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	<title>Home - GummyBear Admin</title>
+	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"> </script>
+	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"> </script> 
 </head>
+
+
 <body>
-	<h1>Test</h1>
-	<h2>Helloooooooooo</h2>
-	<!-- Footer -->
-  	<div>
-  		<p>The GummyBears control panel - Copyright &copy;</p>
-  	</div>
+	<div class="container-fluid">
+		<div>
+			<form th:action="${/logout}" method="post" th:hidden="true" name="logoutForm">
+				<input type="submit"/>
+			</form>
+			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+				<a class="navbar-brand" th:href="@{/}"> 
+					<img th:src="@{/images/gummybear_logo.png}">
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				
+				<div class="collapse navbar-collapse" id="topNavbar">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" th:href="@{/users/}">Users</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" th:href="@{/newuser/}">New User</a>
+						</li>
+						<li>
+							<span class="fas fa-user fa-2x icon-silver"> </span>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown toggle" data-toggle="dropdown" sec:authentication="principal.fullname"></a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" id="logoutLink" href="">Logout</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</nav> 
+		</div>						
+	</div>
+	
+	<br>
+	
+	<div>
+		<h1> Admin Homepage</h1>
+	</div>
+	
+	
+	<div class="text-center">
+		<p> Copyright &copy; GummyBear </p>
+	</div>
+	
 </body>
 </html>
