Admin index.html updated

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/index.html
@@ -54,7 +54,11 @@
 		<h1> Admin Homepage</h1>
 	</div>
 	
+	<div class="text-center">
+  	<h3>Welcome to The Gummy bears</h3>
+  	</div>
 	
+	<!-- Footer -->
 	<div class="text-center">
 		<p> Copyright &copy; GummyBear </p>
 	</div>
