--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/user_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/user_form.html
@@ -44,9 +44,11 @@
 	</div>
 
 <!--Form section-->
-<form th:action="@{/users/save}" method="POST" style="max-width: 700px; margin: 0 auto;"
-th:object="${user}" onsubmit="return checkEmailUnique(this);">
-<input type="hidden" th:field="*{id}"/>
+<form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
+		th:object="${user}" onsubmit="return checkEmailUnique(this);">
+		
+		<input type="hidden" th:field="*{id}"/>
+		
     <div class="border border-secondary rounded p-3">
         <div class="form-group row">
             <label class="col-sm-4 col-form-label">Email: </label>
@@ -85,47 +87,50 @@ th:object="${user}" onsubmit="return checkEmailUnique(this);">
                     th:value="${role.id}"
                     class="m-2"
                     />
-                    - <small>[[${role.description}]]<small>
+                    - [[${role.description}]]
                     <br/>
                 </th:block>
             </div>
         </div>
+        
         <div class="form-group row">
             <label class="col-sm-4 col-form-label">Enabled: </label>
             <div class="col-sm-8">
                 <input type="checkbox" th:field="*{enabled}"  />
             </div>
         </div>
+        
         <!--Button-->
         <div class="text-center">
-            <input type="submit" value="save" class="btn btn-primary m-3"/>
-            <input type="button" value="cancel" class="btn btn-secondary"/>
+            <input type="submit" value="Save" class="btn btn-primary m-3"/>
+            <input type="button" value="cancel" class="btn btn-secondary" id="buttonCancel"/>
         </div>
+        
     </div>
 </form>
 
 <div class="modal fade text-center" id="modalDialog">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h4 class="modal-title" id="modalTitle">Warning</h4>
-				<button type="button" class="close" data-dismiss="modal">&times;</button>
-			</div>
-			
-			<div class="modal-body">
-				<span id="modalBody"></span>
-			</div>
-			
-			<div class="modal-footer">
-				<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-			</div>
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title" id="modalTitle">Warning</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+
+				<div class="modal-body">
+					<span id="modalBody"></span>
+				</div>
+
+				<div class="modal-footer">
+					<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+				</div>
 		</div>
 	</div>
 </div>
 	
 
 	
-	
+	<!-- Footer -->
 	<div class="text-center">
 		<p> Copyright &copy; GummyBear </p>
 	</div>
@@ -133,44 +138,43 @@ th:object="${user}" onsubmit="return checkEmailUnique(this);">
 	
 	<!--Thitari-->
 	<script type="text/javascript">
-		$(document).ready(function(){
+	$(document).ready(function() {
 		$("#buttonCancel").on("click", function() {
-		window.location = "[[@{/users}]]";
-			});
+			window.location = "[[@{/users}]]";
 		});
-		
+	});
+	
+
 	function checkEmailUnique(form){
-    url = "[[@{/users/check_email}]]";
-    userEmail = $("#email").val();
-    userId = $("#id").val();
-    csrfValue = $("input[name='_csrf']").val();
-    params = {id: userId, email: userEmail, _csrf: csrfValue};
-    
-    $("#modalDialog").modal();
-    
-    if (true) return false;
+		//alert('check email unique');
+		url = "[[@{/users/check_email}]]";
+		userEmail = $("#email").val();
+		userId =  $('#id').val();
+		csrfValue = $("input[name='_csrf']").val();
+		params = {id: userId, email: userEmail, _csrf: csrfValue};
 
-    $post(url, params, function(response){
-        if(response == "OK"){
-            form.submit();
-        }else if(reponse == "Duplicated"){
-            showModalDialog("Warning", "There is another user having the email " + userEmail);
-        }else{
-            showModalDialog("Error", "Unknown response from server");
-        }
-    }).fail(function(){
-        showModalDialog("Error", "Could not connect to the server");
-    });
-    return false;
-}
+		$.post(url, params, function(response) {
+			if (response == "OK") {
+				form.submit();
+			} else if (response == "Duplicated") {
+				showModalDialog("Warning", "There is another user having the email " + userEmail);
+			} else {
+				showModalDialog("Error", "Unknown response from server");
+			}
+		}).fail(function() {
+			showModalDialog("Error", "Could not connect to the server");
+		});
 
-
+		return false;
+	}
+	
 	function showModalDialog(title, message) {
 		$("#modalTitle").text(title);
 		$("#modalBody").text(message);
 		$("#modalDialog").modal();
+
 	}
-	
-	</script>
+
+</script>
 </body>
 </html>
