--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/login.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/login.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 </head>
 <body>
-<div class=""container-fluid"">
+  <div class="container-fluid text-center">
+	<div>
 
 	<div class="container-fluid text-center">
 		<img th:src="@{/images/gummybear_logo.png}" />
@@ -25,7 +26,7 @@
 			<p class="text-warning">You have been logged out</p>
 		</div>
 	
-		<div class*"border border-secondary rounded p-3">
+		<div class="border border-secondary rounded p-3">
 			<p>Access to Gummy Bear Admin Dashboard</p>
 			<p>
 				<input type="email" name="email" class="form-control" placeholder="E-mail" required/>
@@ -40,9 +41,13 @@
 	
 	</form>
 	
+	
 	<!-- Footer -->
   	<div>
   		<p>The GummyBears control panel - Copyright &copy;</p>
   	</div>
+  	</div>
+  	</div>
+  
 </body>
 </html>
