--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
 <body>
 	<div class="container-fluid">
 		<div>
+		<!-- Jonas -->
 			<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
 				<input type="submit" />
 			</form>
@@ -65,7 +66,7 @@
 		<p> Copyright &copy; GummyBear </p>
 	</div>
 
-<!-- Logout -->	
+<!-- Logout/Jonas -->	
 <script type="text/javascript">
 	$(document).ready(function() {
 		$("#logoutLink").on("click", function(e) {
