--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
@@ -1,11 +1,98 @@
 <!DOCTYPE html>
-<html>
+
+<!-- @author Olga --> 
+
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Gummy Bear Time Tracking</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	<title>Home - GummyBear Employee</title>
+	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
+	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"> </script>
+	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"> </script> 
 </head>
+
+
 <body>
-	<h1>Test 2</h1>
-	<h2>Hello every one -Thitari</h2>
+	<div class="container-fluid">
+		<div>
+			<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+				<input type="submit" />
+			</form>
+			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+				<a class="navbar-brand" th:href="@{/}"> 
+					<img th:src="@{/images/gummybear_logo.png}">
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				
+				<div class="collapse navbar-collapse" id="topNavbar">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" style="font-size:1.5em" th:href="@{/timeoverview/}">Time overview</a>
+						</li>
+						<li>
+							<span class="fas fa-user fa-2x icon-silver"> </span>
+						</li>
+						<li class="nav-item dropdown">
+							<!--<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+								sec:authentication="principal.fullname" ></a>-->
+							<div class="dropdown-menu">
+								<a class="dropdown-item" id="logoutLink" href="">Logout</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</nav> 
+		</div>						
+	</div>
+	
+	<div>
+		<h2 style= "color:grey; margin-left: 10px"> Employee Information</h2>
+	</div>
+	
+	<div th:if="${message != null}" class="alert alert-success text-center">
+		[[${message}]]
+	</div>
+	
+	<hr>
+	
+	<div class="text-left">
+		<label style= "color:grey; margin-left: 10px; font-size: 1.2em"> Register Working Hours: </label>
+		
+		<form th:action="@{/checkin}" method="post">
+			<input type="submit" value="Check-In" class="btn btn-success m-1"/> 
+		</form>
+		
+		<form th:action="@{/checkout}" method="post">
+			<input type="submit" value="Check-Out" class="btn btn-danger m-1"/> 
+		</form>
+		
+	</div>
+
+	
+	<div class="text-center">
+		<h3>Welcome to The GummyBear Company</h3>
+  	</div>
+	
+	<div class="text-center">
+		<p> Copyright &copy; GummyBear </p>
+	</div>
+	
+	<!--TODO: remove script below as not used-->
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("#buttonCheckin").on("click", function() {
+				console.log("hello");
+				link = $(this);
+				console.log(link);
+				window.location = "[[@{/}]]";
+			});
+		}); 
+	</script>
+
 </body>
 </html>
