--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timeoverview.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timeoverview.html
@@ -13,8 +13,9 @@
 <body>
 	<div class="container-fluid">
 		<div>
-			<form th:action="${/logout}" method="post" th:hidden="true" name="logoutForm">
-				<input type="submit"/>
+		<!-- Jonas -->
+			<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+				<input type="submit" />
 			</form>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<a class="navbar-brand" th:href="@{/}"> 
@@ -27,24 +28,25 @@
 				<div class="collapse navbar-collapse" id="topNavbar">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" th:href="@{/timeoverview/}">Time overview</a>
+							<a class="nav-link" th:href="@{/timeoverview/}">Time Statement</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" th:href="@{/timetracking/}">Track Time</a>
+							<a class="nav-link" th:href="@{/timetracking/}">Time Tracking</a>
 						</li>
 						<li>
 							<span class="fas fa-user fa-2x icon-silver"> </span>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown toggle" data-toggle="dropdown" sec:authentication="principal.fullname"></a>
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+								sec:authentication="principal.fullname" ></a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" id="logoutLink" href="">Logout</a>
 							</div>
 						</li>
 					</ul>
 				</div>
-			</nav>
-		</div>
+			</nav> 
+		</div>						
 	</div>
 	
 	<br>
@@ -54,7 +56,7 @@
 	</div>
 	
 	<br>
-	
+
 	<div>
 		<table class="table table-bordered table-striped table-hover table-responsive-xL">
 			<thead class="thead-dark">
@@ -80,22 +82,22 @@
 					<td>[[$(time.special)]]</td>
 				</tr>
 			</tbody>
+			
 		</table>
 	</div>
-	
+
 	<div class="text-center">
 		<p> Copyright &copy; GummyBear </p>
 	</div>
 	
 <script type="text/javascript">
 	$(document).ready(function() {
-		$("#logoutLink").on("click", function (e) {
+		$("#logoutLink").on("click", function(e) {
 			e.preventDefault();
-			document.logoutForm.submit()
+			document.logoutForm.submit();
 		});
 	});
 </script>
-
 </body>
 </html>
 					
