Deleted redundant classes, cleaned up some code, added docs.

--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timetracking.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timetracking.html
@@ -77,17 +77,14 @@
 		<form th:action="@{/checkout}" method="post">
 			<input type="submit" value="Check-Out" class="btn btn-danger m-2"/> 
 		</form>
-		<hr>
-		<p style="margin-left: 10px;"> Login time: <span id='date-time'> </span>. </p>
 	</div>
 	
+	<br> 
 	
 	<div>
-		<h2> Time Overview</h2>
+		<h2 style= "color:grey; margin-left: 10px"> Time Overview</h2>
 	</div>
 	
-	<br>
-
 	<div>
 		<table class="table table-bordered table-striped table-hover table-responsive-xL">
 			<thead class="thead-dark">
@@ -111,7 +108,9 @@
 		</table>
 	</div>
 	
-
+	<br>
+    <hr>
+    <p style="margin-left: 10px;"> Login time: <span id='date-time'> </span>. </p>
 	
 	<div class="text-center">
 		<h3>The GummyBears Company</h3>
