--- a/GummyBearWebParent/GummyBearBackEnd/bin/src/main/resources/templates/login.html
+++ b/GummyBearWebParent/GummyBearBackEnd/bin/src/main/resources/templates/login.html
@@ -1,31 +1,33 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-	
-	<title>Gummy Bear Admin Login</title>
-	
-	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-</head>
-<body>
+<!doctype html>
+<html xmlns:th="http://www.thymeleaf.org" lang="en"
+		xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, minimum-scale=1.0">
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
+    <title>Login-Gummy Bear</title>
+  </head>
+
+  <body>
   <div class="container-fluid text-center">
 	<div>
 
-	<div class="container-fluid text-center">
+	<div>
 		<img th:src="@{/images/gummybear_logo.png}" />
 	</div>
-	
+
 	<form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
-	
+
 		<div th:if="${param.error}">
 			<p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
 		</div>
 		<div th:if="${param.logout}">
 			<p class="text-warning">You have been logged out</p>
 		</div>
-	
+
 		<div class="border border-secondary rounded p-3">
 			<p>Access to Gummy Bear Admin Dashboard</p>
 			<p>
@@ -34,20 +36,16 @@
 						<p>
 				<input type="password" name="password" class="form-control" placeholder="password" required/>
 			</p>
-			<p>
 				<input type="submit" value="Login" class="btn btn-primary" />
 			</p>
 		</div>
-	
+
 	</form>
-	
-	
-	<!-- Footer -->
-  	<div>
-  		<p>The GummyBears control panel - Copyright &copy;</p>
-  	</div>
-  	</div>
-  	</div>
-  
-</body>
-</html>
+
+		<div>
+  			<p>The GummyBears control panel - Copyright &copy;</p>
+  		</div>
+  </div>
+  </div>
+  </body>
+</html> 
