--- a/GummyBearWebParent/GummyBearBackEnd/bin/src/main/resources/templates/users.html
+++ b/GummyBearWebParent/GummyBearBackEnd/bin/src/main/resources/templates/users.html
@@ -16,7 +16,10 @@
 <body>
 	<div class="container-fluid">
 		<div>
-			
+			<!-- Jonas -->
+			<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+				<input type="submit" />
+			</form>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<a class="navbar-brand" th:href="@{/}"> 
 					<img th:src="@{/images/gummybear_logo.png}">
@@ -25,20 +28,29 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				
-				<div class="collapse navbar-collapse" id="topNavbar">
-					<ul class="navbar-nav">
+				<div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2" id="topNavbar">
+					<ul class="navbar-nav mr-auto">
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{/users/}">Users</a>
 						</li>
+					</ul>
+				</div>	
+					
+				<div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="topNavbar">
+					<ul class="navbar-nav ml-auto">
 						<li>
 							<span class="fas fa-user fa-2x icon-silver"> </span>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" sec:authentication="principal.fullname" ></a>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+								sec:authentication="principal.fullname" ></a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" id="logoutLink" href="">Logout</a>
+							</div>
 						</li>
 					</ul>
 				</div>
-			</nav> 
+			</nav>  
 		</div>						
 	</div>
 	
@@ -129,7 +141,18 @@
 		<p> Copyright &copy; GummyBear </p>
 	</div>
 	
-	 <!--Thitari-->
+	
+<!-- Logout/Jonas -->	
+<script type="text/javascript">
+	$(document).ready(function() {
+		$("#logoutLink").on("click", function(e) {
+			e.preventDefault();
+			document.logoutForm.submit();
+		});
+	});
+</script>
+
+<!--Thitari-->
 <script type = "text/javascript">
 	$(document).ready(function() {
 			$(".link-delete").on("click", function(e) {
