--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/user_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/user_form.html
@@ -100,6 +100,13 @@
             </div>
         </div>
         
+        <!--  <div class="form-group row">
+            <label class="col-sm-4 col-form-label">Job Title: </label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" th:field="*{jobTitle}" required minlength="2"  />
+            </div>
+        </div>-->
+        
          <div class="form-group row">
             <label class="col-sm-4 col-form-label">Working hours: </label>
             <div class="col-sm-8">
