--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/templates/users.html
@@ -56,7 +56,7 @@
 	
 	<br>
 	
-	<div>
+	<div class="container-fluid">
 		<h2> Company Employees</h2>
 		<a th:href="@{/users/new}">Create New User</a>
 	</div>
@@ -68,7 +68,7 @@
 		[[${message}]]
 		</div>
 
-	<div class ="full-details">
+	<div class ="full-details container-fluid">
 		<table class="table table-bordered table-hover table-responsive-xl">
 			<thead class="thead-dark">
 				<tr> 
