Insert the reference for CSS

--- a/GummyBearWebParent/GummyBearBackEnd/src/main/resources/static/style.css
+++ b/GummyBearWebParent/GummyBearBackEnd/src/main/resources/static/style.css
@@ -54,12 +54,13 @@ th {
 	div.full-details { display : block;}
 	div.less-details { display : none;}	
 	
+	/**
+	Ref : https://codepen.io/AllThingsSmitty/pen/MyqmdM
+	Ref : https://codepen.io/team/css-tricks/pen/wXgJww
+	**/
 	table, thead, tbody, th, td, tr {
 			display: block;
 		}
-
-
-
   
   table thead {
     border: thick;
